<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/math5"
    android:id="@+id/constraintMain"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/startMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/startMsg"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frontAdditionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/frontAdditionButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/start_quizAdd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/frontSubscriptionButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/start_quizSubs"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontAdditionButton"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/frontMultiplicationButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/start_quizMulti"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontSubscriptionButton"
        app:layout_constraintVertical_bias="0.08" />
    <Button
        android:id="@+id/frontDivisionButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/start_quizDiv"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frontMultiplicationButton"
        app:layout_constraintVertical_bias="0.13" />



</androidx.constraintlayout.widget.ConstraintLayout>