<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Division"
    android:id="@+id/constraintParentDiv"
    android:background="@drawable/math5">

    <TextView
        android:id="@+id/resultTextViewDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/textviewDiv"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startQuizButtonDiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startQuizButtonDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/start_quiz"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MenuBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:text="@string/menu"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startQuizButtonDiv"
        app:layout_constraintVertical_bias="0.135" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintChildDiv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/math5"
        android:visibility="gone">

        <TextView
            android:id="@+id/timerTextViewDiv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_30s"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/quizGridViewDiv"
            app:layout_constraintEnd_toStartOf="@+id/questionTextViewDiv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />

        <TextView
            android:id="@+id/statusTextViewDiv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_0_0"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/quizGridViewDiv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/questionTextViewDiv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.523" />

        <TextView
            android:id="@+id/questionTextViewDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/Div_12_23"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/quizGridViewDiv"
            app:layout_constraintEnd_toStartOf="@+id/statusTextViewDiv"
            app:layout_constraintStart_toEndOf="@+id/timerTextViewDiv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/quizGridViewDiv"
            android:layout_width="wrap_content"
            android:layout_height="184dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="354dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTextViewDiv">

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:onClick="chooseAnswerDiv"
                android:tag="0"
                android:text="@string/_32"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button1Div"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:onClick="chooseAnswerDiv"
                android:tag="1"
                android:text="@string/_35"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button2Div"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:onClick="chooseAnswerDiv"
                android:tag="2"
                android:text="@string/_39"
                android:textSize="30sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button3Div"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_background"
                android:onClick="chooseAnswerDiv"
                android:tag="3"
                android:text="@string/_45"
                android:textSize="30sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />

        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/correctTextviewDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="158dp"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="158dp"
            android:layout_marginRight="158dp"
            android:layout_marginBottom="180dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/give_your_best_shot"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quizGridViewDiv" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>